2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp, gtk-gui/gui.stetic: Updated paths.

2007-11-23  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Should fix bug #343098
	
	  gcc/g++ failed if path had white spaces.

2007-11-17  Christian Hergert <christian.hergert@gmail.com> 

	* Gui/EditPackagesDialog.cs: Check if string is null or empty before using
	  it to prevent crash.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/TagDatabaseManager.cs: Track LoggingService API changes.

2007-11-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs: Moved all the threading for the
	  parsing of source files to the TagDatabaseManager, parsing jobs are
	  placed on a queue and dispatched by a single thread. Fixes bug 336368.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Bump MD version.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Track changes in the Icon extension node.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Compiler/GNUCompiler.cs: Handle cancellation of build.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/EditPackagesDialog.cs: Normalise pkg-config paths so that comparison
	  to avoid duplication works correctly. Add lib64 to default paths.
	* Project/CProjectConfiguration.cs: Add configuration option to disable
	  precompilation of headers.
	* Project/CProjectServiceExtension.cs: Pass cleanup to ICompiler.Clean.
	* Compiler/CCompiler.cs, Compiler/ICompiler.cs: Add Clean method and
	  SupportsPrecompiledHeaders property.
	* Compiler/GNUCompiler.cs: Reworked process launching so that it handles
	  output as it's generated. (fixes "Bug 336363 - [CBinding, possibly all
	  MD] MD hangs when a compile output is long"). Headers are now
	  precompiled if they're set to "compile", and precompilation errors are