@@ -1,17 +1,17 @@
 <Combine name="CBinding" fileversion="2.0">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="CombineConfiguration">
-      <Entry build="True" name="CBinding" configuration="Debug" />
-      <Entry build="True" name="CBinding.Autotools" configuration="Debug" />
+      <Entry build="True" name="MonoDevelop.CBinding" configuration="Debug" />
+      <Entry build="True" name="MonoDevelop.CBinding.Autotools" configuration="Debug" />
     </Configuration>
     <Configuration name="Release" ctype="CombineConfiguration">
-      <Entry build="True" name="CBinding" configuration="Release" />
-      <Entry build="True" name="CBinding.Autotools" configuration="Release" />
+      <Entry build="True" name="MonoDevelop.CBinding" configuration="Release" />
+      <Entry build="True" name="MonoDevelop.CBinding.Autotools" configuration="Release" />
     </Configuration>
   </Configurations>
-  <StartMode startupentry="CBinding" single="True">
-    <Execute type="None" entry="CBinding" />
-    <Execute type="None" entry="CBinding.Autotools" />
+  <StartMode startupentry="MonoDevelop.CBinding" single="True">
+    <Execute type="None" entry="MonoDevelop.CBinding" />
+    <Execute type="None" entry="MonoDevelop.CBinding.Autotools" />
   </StartMode>
   <Entries>
     <Entry filename="CBinding.mdp" />
