@@ -1,3 +1,9 @@
+2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* CBinding.addin.xml, CBinding.mdp, CBinding.mds,
+	  CBinding.Autotools/CBinding.Autotools.mdp, Makefile.am: Directory
+	  reorganization.
+
 2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CBinding.mdp, gtk-gui/gui.stetic: Updated paths.
